# backlink-publisher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  README.zh.md  complexity_budget.toml  config.example.toml  generate_fixtures.py  monolith_budget.toml  mypy.ini  pyproject.toml  test-pipeline.sh  webui.py
.github/: dependabot.yml
.github/workflows/: ci.yml  phase0-seal-check.yml  plan-claims-gate.yml  plan-claims-radar.yml  plan-redrift-gate.yml
.kilo/plans/: 1780139016762-misty-garden.md  1780718342507-gentle-circuit.md  2026-06-07-feat-full-automation-runbook-plan.md  2026-06-08-001-pipeline-performance-optimization-plan.md
.sisyphus/run-continuation/: ses_15d6f5cd5ffehYnw3qBS56c3TB.json  ses_164191753ffe2o2Q2UYZb8zyKH.json  ses_164bca359ffeyB2dvV51XysEkq.json  ses_164e91116ffeVPjqJriAoE7Iw5.json  ses_16cb3268dffexQYgSXSIGTlSrb.json
docs/: bug-sweep-2026-05-18.md  optimization-audit-2026-06.md
docs/architecture/: events-db-scale-tripwire-register.md  io-budgets.md
docs/brainstorms/: 2026-05-11-publisher-adapters-rewrite-requirements.md  2026-05-12-adapter-retry-backoff-requirements.md  2026-05-12-anchor-text-and-blank-target-requirements.md  2026-05-13-checkpoint-resume-requirements.md  2026-05-14-anchor-entropy-alarm-requirements.md  2026-05-18-architecture-health-refactor-requirements.md  2026-05-18-event-substrate-corpus-requirements.md  2026-05-18-pytest-bug-sweep-requirements.md  2026-05-20-homepage-url-autoderive-and-ui-polish-requirements.md  2026-05-20-worktree-branch-pr-cleanup-requirements.md  2026-05-25-dofollow-tiering-and-6-platform-expansion-requirements.md  2026-05-27-bugfix-discipline-requirements.md  2026-05-27-comment-outreach-queue-requirements.md  2026-05-28-ai-gen-pro-group-requirements.md  2026-05-28-comprehensive-optimization-requirements.md  2026-05-28-dedup-failed-to-done-invariant-requirements.md  2026-05-28-history-store-events-db-migration-requirements.md  2026-05-28-livejournal-prod-enablement-bloglovin-retire-requirements.md  2026-05-28-publish-saga-contracts-requirements.md  2026-05-28-readtime-reconciliation-requirements.md  2026-05-28-remove-csdn-juejin-note-channels-requirements.md  2026-05-28-v_next-consistency-observability-release-requirements.md  2026-05-29-backlink-lifecycle-closed-loop-requirements.md  2026-05-29-bloglovin-syndication-tier-requirements.md  2026-05-29-channel-grouping-by-automation-requirements.md  2026-05-29-deficit-driven-replan-requirements.md  2026-05-29-geo-ai-citation-closed-loop-requirements.md  2026-06-01-active-plan-convergence-requirements.md  2026-06-01-channel-discovery-funnel-requirements.md  2026-06-01-events-db-optimization-tripwire-requirements.md  2026-06-01-recheck-ledger-liveness-writeback-requirements.md  2026-06-01-seo-outcome-indexability-loop-requirements.md  2026-06-06-automated-backlink-dashboard-wizard-requirements.md  2026-06-06-dofollow-channel-expansion-requirements.md  2026-06-08-channel-health-routing-requirements.md  2026-06-21-triple-track-optimization-requirements.md
docs/discovery/: 2026-06-01-run.md  canary-blitz-verdicts.md  canary-execution-guide.md  canary-pending.md  discovery-pipeline.md  registry-dofollow-flip-process.md
docs/ideation/: 2026-05-12-backlink-publisher-ideation.md  2026-05-14-round3-fresh-pass-ideation.md  2026-05-28-round10-fresh-pass-ideation.md  2026-05-29-round11-fresh-pass-ideation.md  2026-05-29-round12-fresh-pass-ideation.md  gate-verdicts.md
docs/notes/: channel-decisions.json
docs/operations/: geo-probe.md  recheck-backlinks-runbook.md
docs/phase0/: 2026-05-15-telegraph-indexation-report.md  2026-05-15-velog-spike-report.md
docs/plans/: 2026-05-11-001-feat-publisher-adapters-rewrite-plan.md  2026-05-12-002-feat-adapter-retry-exponential-backoff-plan.md  2026-05-12-003-fix-bare-url-hyperlinks-in-templates-plan.md  2026-05-12-004-fix-target-link-density-minimum-six-plan.md  2026-05-12-007-feat-anchor-text-seo-and-blank-target-plan.md  2026-05-13-003-feat-checkpoint-resume-plan.md  2026-05-13-004-feat-work-themed-backlinks-plan.md  2026-05-14-002-feat-anchor-entropy-alarm-plan.md  2026-05-14-003-feat-config-safety-net-plan.md  2026-05-14-006-feat-sites-form-minimal-input-plan.md  2026-05-14-007-feat-url-content-fetch-gate-plan.md  2026-05-14-008-feat-content-gate-perf-observability-plan.md  2026-05-14-009-feat-homepage-three-tier-url-plan.md  (+80 more)
fixtures/: seed.jsonl
scripts/: _worktree_safety.sh  channel_probe.py  check_plan_redrift.py  geo_refusal_spike.py  git-leak-check.py  install-post-merge-hook.sh  install-pre-push-hook.sh  probe_events_db.py  probe_indexability.py  prune-stale-worktrees.sh  spike_chrome_lifecycle.py
tests/: AGENTS.md  conftest.py  test_adapter_base.py  test_adapter_blogger_api.py  test_adapter_blogger_api_xss_contract.py  test_adapter_dispatcher.py  test_adapter_dofollow_gate.py  test_adapter_exception_logging.py  test_adapter_ghpages.py  test_adapter_hashnode.py  test_adapter_hatena_atompub.py  test_adapter_http_form_post.py  test_adapter_livejournal_api.py  test_adapter_medium_api.py  test_adapter_medium_browser.py  test_adapter_notesio.py  test_adapter_pubmark_api.py  test_adapter_qiita.py  test_adapter_retry.py  test_adapter_txtfyi_api.py  test_adapter_velog_graphql.py  test_adapter_writeas.py  test_adapter_zenn.py  test_ai_draft_validator.py  test_anchor_lang.py  test_anchor_preflight.py  test_anchor_profile.py  test_anchor_resolver.py  test_anchor_scheduler.py  test_asset_version_cache.py  test_auth_type_classification.py  test_auto_health_dashboard.py  test_auto_publish_orchestrator.py  test_auto_recover.py  test_auto_recover_pipeline_integration.py  test_automation_watchdog.py  test_automation_worker_state.py  test_bind_channel_chrome_backend.py  test_browser_publish_chrome_session.py  test_browser_publish_devto.py  (+248 more)
webui_app/: __init__.py  binding_status.py  health_metrics.py  helpers.py  medium_login.py  scheduler.py
webui_store/: __init__.py  base.py  channel_status.py  drafts.py  queue_store.py  registry.py  score_store.py  seen_urls_store.py  wizard_config_store.py
(+441 files in other folders)
