[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backlink-publisher"
version = "0.2.0"
description = "A local-first backlink publishing pipeline for Blogger and Medium."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "playwright>=1.40",
    "requests>=2.28",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock", "pytest-timeout", "requests", "pytest-asyncio>=0.23", "hypothesis>=6.0"]

[project.scripts]
plan-backlinks = "backlink_publisher.cli.plan_backlinks:main"
footprint = "backlink_publisher.cli.footprint:main"
validate-backlinks = "backlink_publisher.cli.validate_backlinks:main"
publish-backlinks = "backlink_publisher.cli.publish_backlinks:main"
report-anchors = "backlink_publisher.cli.report_anchors:main"

[tool.setuptools.packages.find]
where = ["src"]