[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backlink-publisher"
version = "0.2.0"
description = "A local-first backlink publishing pipeline for Blogger and Medium."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "playwright>=1.40",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "flask>=2.0",
    "apscheduler>=3.10",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock", "pytest-timeout", "pytest-socket", "requests", "pytest-asyncio>=0.23", "hypothesis>=6.0"]

[project.scripts]
plan-backlinks = "backlink_publisher.cli.plan_backlinks:main"
footprint = "backlink_publisher.cli.footprint:main"
validate-backlinks = "backlink_publisher.cli.validate_backlinks:main"
publish-backlinks = "backlink_publisher.cli.publish_backlinks:main"
report-anchors = "backlink_publisher.cli.report_anchors:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "real_ssrf_check: exercise the real _check_url_for_ssrf path instead of the default-bypass autouse fixture (tests/test_content_fetch.py)",
]