[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backlink-publisher"
version = "0.2.0"
description = "A local-first backlink publishing pipeline for Blogger and Medium."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=4.2",
    "google-api-python-client>=2.196",
    "google-auth-oauthlib>=1.4",
    "google-auth-httplib2>=0.2",
    "playwright>=1.55",
    "requests>=2.32.4",
    "websocket-client>=1.9",
    "beautifulsoup4>=4.13",
    "flask>=3.1,<4",
    "apscheduler>=3.11,<4",
    "pyyaml>=6.0.3",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
# radon is pinned to exact version (deviates from house `>=` style) because SLOC counts
# must be deterministic across CI matrix rows; bumping radon requires re-measuring all
# 5 monolith ceilings in the same PR. See docs/plans/2026-05-18-006-feat-monolith-sloc-ceiling-plan.md.
dev = ["pytest>=8.4", "pytest-mock>=3.15", "pytest-timeout>=2.4", "pytest-socket>=0.7", "pytest-env>=1.6", "pytest-asyncio>=1.1,<2", "hypothesis>=6.151", "radon==6.0.1", "mypy>=1.8"]
# webwright is pinned to exact version — upstream is a 3-week-old project in rapid iteration;
# loose constraints risk silent breaking changes. Upgrade manually after evaluating changelog.
dev-webwright = ["webwright==0.0.7"]

[project.scripts]
plan-backlinks = "backlink_publisher.cli.plan_backlinks:main"
footprint = "backlink_publisher.cli.footprint:main"
validate-backlinks = "backlink_publisher.cli.validate_backlinks:main"
phase0-seal = "backlink_publisher.cli.phase0_seal:main"
publish-backlinks = "backlink_publisher.cli.publish_backlinks:main"
report-anchors = "backlink_publisher.cli.report_anchors:main"
equity-ledger = "backlink_publisher.cli.equity_ledger:main"
bind-channel = "backlink_publisher.cli.bind_channel:main"
velog-login = "backlink_publisher.cli.velog_login:main"
medium-login = "backlink_publisher.cli.medium_login:main"
plan-check = "backlink_publisher.cli.plan_check:main"
frw-login = "backlink_publisher.cli.frw_login:main"
audit-state = "backlink_publisher.cli.audit_state:main"
preflight-targets = "backlink_publisher.cli.preflight_targets:main"
cull-channels = "backlink_publisher.cli.cull_channels:main"
canary-targets = "backlink_publisher.cli.canary_targets:main"
comment = "backlink_publisher.cli.comment:main"
generate-backlink-text = "backlink_publisher.cli.generate_backlink_text:main"
plan-gap = "backlink_publisher.cli.plan_gap:main"
recheck-backlinks = "backlink_publisher.cli.recheck_backlinks:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# PYTHONHASHSEED=0 is required by the Footprint Regression Gate
# (tests/test_footprint_regression.py + R10 from Plan 2026-05-18-007).
# Set here via pytest-env so `pytest tests/` works out of the box locally;
# .github/workflows/ci.yml also pins it at the job level for belt+suspenders.
env = ["PYTHONHASHSEED=0"]
# Defensive: zero @pytest.mark.asyncio markers exist in the tree (confirmed
# at Wave 3 time). strict mode is already the default in pytest-asyncio 1.x
# but is declared explicitly so any future async-fixture conversion surfaces
# a clear error rather than a silent mode mismatch.
asyncio_mode = "strict"
# webui_app/ and webui_store/ live at the repo root (not under src/), so any
# test that imports them (e.g. tests/test_bind_channel_driver.py) used to
# require `PYTHONPATH=.`. This pin makes `pytest tests/` collect them out
# of the box from any worktree without a per-tree environment hack.
pythonpath = [".", "src"]
markers = [
    "real_ssrf_check: exercise the real _check_url_for_ssrf path instead of the default-bypass autouse fixture (tests/test_content_fetch.py)",
    "real_content_fetch: exercise the real content_fetch.verify_urls_batch / verify_url_has_content path instead of the default-pass autouse fixture (tests/test_content_fetch.py applies this module-wide)",
    "real_image_gen: exercise the real FRW image-gen endpoint instead of mocking; opt-in operator-only, never runs in CI (Plan 2026-05-20-001 Unit 2)",
    "real_browser_publish_smoke: open live channel compose URL in attached Chrome and verify selectors against current DOM; opt-in operator-only (Plan 2026-05-21-001 Unit 4a+)",
]